add logo whatsapp

--- a/css/style.css
+++ b/css/style.css
@@ -5118,3 +5118,11 @@ div.pp_default .pp_content, div.light_rounded .pp_content {
 	content: "\f0e0";
 	font-size: 20px;
 }
+
+.content-whatsapp{
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	width: 75px;
+	height: 75px;
+}
